@@ -13,7 +13,7 @@ importFrom(MASS, dose.p)
 ##   -- need here *only* those funs that we define S3 methods for
 ##      not the functions from lattice we use as they are covered
 ##      by Depends: lattice in DESCRIPTION
-importFrom(lattice, densityplot, histogram)
+importFrom(lattice, densityplot, dotplot, histogram)
 ## stats
 import(stats)
 ## utils
@@ -66,6 +66,7 @@ export(analog,
        residLen,
        RMSEP,
        splitSample,
+       rankDC,
        roc,
        smoothSpline,
        sppResponse,
@@ -177,18 +178,20 @@ S3method(residuals, pcr)
 S3method(caterpillarPlot, default)
 S3method(caterpillarPlot, data.frame)
 S3method(caterpillarPlot, wa)
+S3method(dotplot, rankDC)
 S3method(plot, minDC)
 S3method(plot, bayesF)
 S3method(plot, cma)
 S3method(plot, dissimilarities)
 S3method(plot, gradientDist)
 S3method(lines, gradientDist)
-S3method(lines, prcurve)
 S3method(points, gradientDist)
 S3method(plot, logitreg)
 S3method(plot, mat)
 S3method(plot, mcarlo)
 S3method(plot, prcurve)
+S3method(lines, prcurve)
+S3method(plot, rankDC)
 S3method(plot, residLen)
 S3method(plot, roc)
 S3method(plot, sppResponse)
@@ -222,6 +225,7 @@ S3method(print, performance)
 S3method(print, prcurve)
 S3method(print, predict.mat)
 S3method(print, predict.wa)
+S3method(print, rankDC)
 S3method(print, residLen)
 S3method(print, residuals.bootstrap.mat)
 S3method(print, residuals.mat)
